<resources>
    <string name="app_name">PathFollower</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>

    <string name="search_place">Searching…</string>
    <string name="poi">poi</string>


    <string name="need_location">Enable GPS SERVICE</string>
    <string name="location_content">This app wants to change your device settings use GPS,Wi-Fi and cell networks for
        your location
    </string>
    <string name="frisbee_needs_your_location_in_order_to_find_your_captain_according_to_current_location">Frisbee needs
        your location in order to find nearby drivers and your current location .
    </string>
    <string name="no_car">No Car</string>

    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="location_permission_not_granted">Location Permission not granted</string>
    <string name="current_location">Current Location</string>
    <string name="where_to">Where to?</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="request_cab">Request Cab</string>
    <string name="your_cab_is_arriving">Your Cab is Arriving</string>
    <string name="requesting_your_cab">Requesting your cab</string>
    <string name="your_cab_is_booked">Your Cab is Booked</string>
    <string name="your_cab_has_arrived">Your Cab has Arrived</string>
    <string name="you_are_on_a_trip">You are on a trip</string>
    <string name="trip_end">Trip End</string>
    <string name="take_next_ride">Take Next Ride</string>
    <string name="route_not_available_choose_different_locations">Route Not Available: Choose different pickup and drop location</string>

</resources>
